Dark mode issues are fixed

--- a/src/scss/pages/education-page.scss
+++ b/src/scss/pages/education-page.scss
@@ -3,6 +3,7 @@
         background: #FFFFFF;
         padding: 47px 29px 38px 37px;
         margin-bottom: 70px;
+        transition: 600ms all;
 
         h4 {
             font-weight: 500;
